connect frontend with backend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="container">
-    <h1 class="my-4">Caffeinehunt</h1>
+    <p class="my-4">Caffeinehunt</p>
     <div id="root"></div>
   </div>
 </body>
