change infinite scroll impl using button

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,10 @@
   </head>
   <body>
     <div class="container">
-      <p id="title">CaffeineHunt</p>
+      <p class="title">
+        <img src="%PUBLIC_URL%/logo2.png" />
+        <span>CaffeineHunt</span>
+      </p>
       <div id="root"></div>
     </div>
   </body>
