--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <p class="title">
-        <img src="%PUBLIC_URL%/logo2.png" />
+        <img src="%PUBLIC_URL%/logo.png" />
         <span>CaffeineHunt</span>
       </p>
       <div id="root"></div>
